# yandex-music-downloader

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.local.md.example  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_INTEGRATION.md  pyproject.toml  turbo.json  vercel.json
.claude/: settings.json
.claude/rules/: api.md  code-style.md  frontend.md  testing.md
.github/workflows/: ci.yml  vercel-deploy.yml
apps/api/: pyproject.toml
apps/api/src/dj_ai_api/: config.py  deps.py  main.py
apps/api/src/dj_ai_api/routers/: __init__.py  analysis.py  library.py  sets.py  tracks.py  yandex.py
apps/api/tests/: __init__.py  conftest.py  test_tracks.py  test_yandex.py
apps/mcp/: pyproject.toml
apps/mcp/src/dj_ai_mcp/: __init__.py  server.py
apps/mcp/tests/: conftest.py  test_server.py
apps/web/: .env.example  DEPLOYMENT.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/scripts/: check-build.sh  deploy-vercel.sh  verify-deployment.sh
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/analyze/: page.tsx
apps/web/src/app/sets/: page.tsx
apps/web/src/app/tracks/: page.tsx
apps/web/src/lib/: api.ts
docs/dj/: DJAY_PRO_AI_GUIDE.md  DJ_SETUP_README.md  DJ_TOOLS_README.md  HARMONIC_MIXING_GUIDE.md  PLAYLIST_VALIDATION_README.md
docs/plans/: 2026-01-15-git-best-practices-refactor.md  2026-01-16-dj-ai-studio-design.md  2026-01-16-phase1-foundation.md
scripts/dj/: analyze_audio.py  calculate_energy.py  generate_transition_guide.py  inspect_track_metadata.py  key_detector.py  optimize_playlist.py  prepare_dj_set.py  recommend_tracks.py  reorder_by_camelot.py  reorder_playlist.py  run_full_analysis.sh  update_m3u8_extended.py  validate_playlist.py  write_id3_tags.py
tests/: __init__.py  test_core.py
ymd/: api.py  cli.py  core.py
