[project]
name = "dj-ai-api"
version = "0.1.0"
description = "FastAPI backend for DJ AI Studio"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "dj-ai-studio-core[yandex,audio]",
]

[tool.uv.sources]
dj-ai-studio-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_ai_api"]
